k8s/base/feature-flags/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: feature-flags-stable
  namespace: platform
  labels:
    app: feature-flags
  annotations:
    service.kubernetes.io/topology-aware-hints: "auto"
spec:
  selector:
    app: feature-flags
  ports:
    - name: http
      port: 9096
      targetPort: 9096
      protocol: TCP
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: feature-flags-canary
  namespace: platform
  labels:
    app: feature-flags
  annotations:
    service.kubernetes.io/topology-aware-hints: "auto"
spec:
  selector:
    app: feature-flags
  ports:
    - name: http
      port: 9096
      targetPort: 9096
      protocol: TCP
  type: ClusterIP
